test/spec_vectors/func/fail/module_28.wat
(module (func $type-empty-f64 (result f64)))